# p2p-exchange

./: .gitignore  README.md
signalling/: Cargo.toml
signalling/lambda/: Cargo.toml
signalling/lambda/src/: main.rs
signalling/rest-server/: Cargo.toml
signalling/rest-server/src/: main.rs
signalling/signalling/: Cargo.toml
signalling/signalling/src/: answer.rs  lambda.rs  lib.rs  macros.rs  message.rs  offer.rs
signalling/signalling/src/macros/: actix.rs  db.rs  lambda.rs
terraform/: apigw.tf  backend.tf  cloudfront-response-policy.tf  cloudfront.tf  lambda.tf  locals.tf  provider.tf  route53.tf  s3.tf  variables.tf  vpc.tf
terraform/vars/: template.hcl  template.tfvars
www/: package.json  tailwind.config.js  vue.config.js
www/public/: index.html
www/src/: App.vue  main.js
www/src/components/: buttoncomponent.vue  errorcomponent.vue  processingcomponent.vue
www/src/lib/: connection.js  connectionbuilder.js  signalingchannel.js
www/src/pages/: acceptanswerpage.vue  connectedpage.vue  homepage.vue  offerpage.vue  offerreadypage.vue  waitansweracceptpage.vue
