[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log         = "0.4"
env_logger  = "0.9"
lambda_http = "0.7"
tokio       = { version = "1", features = [ "macros" ] }
regex       = "1"

signalling = { path = "../signalling", features = [ "lambda" ] }
